fix(address) aligning zip correctly

--- a/src/platform/elements/form/extras/address/Address.scss
+++ b/src/platform/elements/form/extras/address/Address.scss
@@ -56,7 +56,7 @@ novo-address {
     }
   }
   .zip {
-    flex: 1 0 20%;
+    flex: 1 0 19.5%;
     padding: 5px 0 !important;
   }
   .country-name {
